notedown-tree-sitter/test/corpus/headings.txt
================================================================================
Simple heading
================================================================================

# Heading

--------------------------------------------------------------------------------

(document
  (heading
    content: (text)))

================================================================================
Multiple level heading
================================================================================

## Level 2 Heading

--------------------------------------------------------------------------------

(document
  (heading
    content: (text)))

================================================================================
Heading with multiple levels
================================================================================

# First
## Second
### Third

--------------------------------------------------------------------------------

(document
  (heading
    content: (text))
  (heading
    content: (text))
  (heading
    content: (text)))
