notedown-tree-sitter/test/corpus/mixed_content.txt
================================================================================
Complex document with mixed content
================================================================================

# Main Title

This paragraph contains [[wikilink]] and more text.

## Section with [[link|Display Text]]

Another paragraph here.

### Subsection

Final paragraph with [[multiple]] [[links|here]].

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h1_marker)
    (text))
  (text)
  (wikilink
    target: (wikilink_target))
  (text)
  (atx_heading
    (atx_h2_marker)
    (text)
    (wikilink
      target: (wikilink_target)
      display: (wikilink_display)))
  (text)
  (atx_heading
    (atx_h3_marker)
    (text))
  (text)
  (wikilink
    target: (wikilink_target))
  (text)
  (wikilink
    target: (wikilink_target)
    display: (wikilink_display))
  (text))

================================================================================
Wikilinks with special characters
================================================================================

[[file-name]] and [[with_underscore|Display]]

--------------------------------------------------------------------------------

(document
  (wikilink
    target: (wikilink_target))
  (text)
  (wikilink
    target: (wikilink_target)
    display: (wikilink_display)))

================================================================================
Nested wikilinks in headings
================================================================================

# Documentation for [[project|Our Project]]
## [[Getting Started]]
### Working with [[files|File System]]

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h1_marker)
    (text)
    (wikilink
      target: (wikilink_target)
      display: (wikilink_display)))
  (atx_heading
    (atx_h2_marker)
    (wikilink
      target: (wikilink_target)))
  (atx_heading
    (atx_h3_marker)
    (text)
    (wikilink
      target: (wikilink_target)
      display: (wikilink_display))))

================================================================================
Edge case: Empty content
================================================================================

#  

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h1_marker)))

================================================================================
Edge case: Just wikilinks
================================================================================

[[first]][[second]]

--------------------------------------------------------------------------------

(document
  (wikilink
    target: (wikilink_target))
  (wikilink
    target: (wikilink_target)))
