notedown-tree-sitter/test/corpus/wikilinks.txt
================================================================================
Simple wikilink
================================================================================

[[target]]

--------------------------------------------------------------------------------

(document
  (wikilink
    target: (wikilink_target)))

================================================================================
Wikilink with display text
================================================================================

[[target|display text]]

--------------------------------------------------------------------------------

(document
  (wikilink
    target: (wikilink_target)
    display: (wikilink_display)))

================================================================================
Text with wikilink
================================================================================

Here is a [[link]] to something.

--------------------------------------------------------------------------------

(document
  (text)
  (wikilink
    target: (wikilink_target))
  (text))

================================================================================
Heading with wikilink
================================================================================

# Heading with [[link]]

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h1_marker)
    (text)
    (wikilink
      target: (wikilink_target))))

================================================================================
Multiple wikilinks
================================================================================

[[first]] and [[second|display]]

--------------------------------------------------------------------------------

(document
  (wikilink
    target: (wikilink_target))
  (text)
  (wikilink
    target: (wikilink_target)
    display: (wikilink_display)))